[package]
name = "rebpf"
version = "0.1.1"
authors = ["Lorenzo Vannucci <lorenzo@vannucci.io>"]
edition = "2018"
license = "LGPL-3.0"
documentation = "https://docs.rs/rebpf/"
readme = "README.md"
repository = "https://github.com/uccidibuti/rebpf"
description = """
A ebpf library built on top of libbpf (no bcc dependency).
"""
keywords = ["bpf", "ebpf", "rebpf", "xdp"]

[dependencies]
libc = "0.2.66"
libbpf-sys = "0.0.7-1"
rebpf-macro = { path = "../rebpf-macro", version = "0.1.0" }
function_name = "0.2.0"