[package]
name = "rebpf"
version = "0.1.5"
authors = ["Lorenzo Vannucci <lorenzo@vannucci.io>", "Simon Chopin <s.chopin@alphalink.fr>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/rebpf/"
readme = "../README.md"
repository = "https://github.com/rebpf/rebpf"
description = """
A ebpf library built on top of libbpf (no bcc dependency).
"""
keywords = ["bpf", "ebpf", "rebpf", "xdp"]

[features]
default = ["bpf", "userspace"]
bpf = []
userspace = []

[dependencies]
rebpf-macro = { version = "0.1.1", path = "../rebpf-macro" }
libbpf-sys = "0.0.7-1"
maybe-uninit = "2.0"
libc = "0.2.66"
bitflags = "1.2"
function_name = "0.2.0"
thiserror = "1.0"
lazy_static = "1.4"
duplicate = { version = "0.2.8", default-features = false }