[package]
name = "packet_parser"
version = "0.1.0"
authors = ["Lorenzo Vannucci <lorenzo@vannucci.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
rebpf = { version = "0.1.2", path = "../../rebpf" }
clap = "2.23.0"
pdu = { git = "https://github.com/uccidibuti/pdu.git", features = ["bpf"] }

[lib]
name = "kern"
path = "src/kern.rs"

[[bin]]
name = "user"
path = "src/user.rs"