[package]
name = "xdp_basic_01"
version = "0.1.0"
authors = ["Lorenzo Vannucci <lorenzo@vannucci.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rebpf = { path = "../../rebpf", version = "0.1.0" }

[feature]
default = ["start"]

[lib]
name = "kern"
path = "src/kern.rs"

#[[bin]]
#name = "user"
#path = "src/user.rs"